updating some configs

--- a/tmux/plugins.conf
+++ b/tmux/plugins.conf
@@ -7,8 +7,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# NORD for tmux
-set -g @plugin 'arcticicestudio/nord-tmux'
+# CPU load
+
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
 # Initialize TPM
 
