--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,3 @@
-set -g default-terminal "screen-256color" 
-set -sg escape-time 0
-set -g mouse on
+source-file $HOME/.config/tmux/settings.conf
+source-file $HOME/.config/tmux/tpm.conf
+source-file $HOME/.config/tmux/plugins.conf
