--- a/tmux/plugins.conf
+++ b/tmux/plugins.conf
@@ -2,10 +2,8 @@
 
 set -g @plugin 'tmux-plugins/tpm'
 
-# Tmux Continuum
-
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# Tmux Power
+set -g @plugin 'wfxr/tmux-power'
 
 # CPU load
 
