--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,3 @@
-source-file $HOME/.config/tmux/settings.conf
-source-file $HOME/.config/tmux/tpm.conf
-source-file $HOME/.config/tmux/plugins.conf
+source-file $HOME/Developer/personalConfigs/tmux/settings.conf
+source-file $HOME/Developer/personalConfigs/tmux/tpm.conf
+source-file $HOME/Developer/personalConfigs/tmux/plugins.conf
