--- a/tmux/plugins.conf
+++ b/tmux/plugins.conf
@@ -2,13 +2,11 @@
 
 set -g @plugin 'tmux-plugins/tpm'
 
-# Tmux Power
-set -g @plugin 'wfxr/tmux-power'
-
-# CPU load
-
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'tmux-plugins/tmux-cpu'
+# Dracula
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-location false
+set -g @dracula-plugins "battery network cpu-usage ram-usage weather"
 
 # Initialize TPM
 
