--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font JetBrainsMono Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 9.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -596,7 +596,7 @@ font_size 9.0
 #: when resizing the OS window. Note that this does not currently work
 #: on Wayland.
 
-# confirm_os_window_close 0
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab that has at
 #: least this number of kitty windows in it. A value of zero disables
