--- a/tmux/settings.conf
+++ b/tmux/settings.conf
@@ -4,3 +4,6 @@ set -g mouse on
 set -g status on
 set -g status-interval 3
 set-option -g focus-events on
+set-option -g history-limit 8000
+
+set-option -sa terminal-features ',xterm-kitty:RGB'
