Install tmux script

--- a/tmux/plugins.conf
+++ b/tmux/plugins.conf
@@ -1,6 +1,6 @@
-# Tmux Plugin Manager
-
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Dracula
 set -g @plugin 'dracula/tmux'
@@ -10,4 +10,4 @@ set -g @dracula-plugins "battery network cpu-usage ram-usage weather"
 
 # Initialize TPM
 
-run -b '~/.config/tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
