--- a/tmux/tpm.conf
+++ b/tmux/tpm.conf
@@ -1,1 +1,1 @@
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/tpm'
